--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li></li>
       <li></li>
     </ul>
-    <a href="index.html"><img id="dvp" src="dvp.png" alt="" /></a>
+    <a href="https://debaprasad-dez.github.io/myweb/"><img id="dvp" src="dvp.png" alt="" /></a>
     
     <div class="wrapper">
       <main data-barba="container" data-barba-namespace="home">
